bdi fixes